fixed hoverwrapper alignment

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3868,6 +3868,10 @@ button {
   text-align: center;
 }
 
+.director {
+  margin-bottom: 10px;
+}
+
 .search-button:hover {
   background-color: rgb(211,211,211);
   font-size: 20px;
